--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "typeRoots": ["node_modules/@types", "./node_modules"]
+          "typeRoots": ["./node_modules/@types", "./types"]
   }
 }
