--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,3 @@
-// {
-//   "extends": "./.nuxt/tsconfig.json",
-//     "compilerOptions": {
-//         "target": "es6",
-//         "module": "esnext",
-//         "strict": true,
-//         "jsx": "preserve",
-//         "moduleResolution": "node",
-//         "esModuleInterop": true,
-//         "skipLibCheck": true,
-//         "forceConsistentCasingInFileNames": true,
-//         "baseUrl": ".",
-//         "paths": {
-//             "@/*": ["src/*"]
-//         },
-//         "typeRoots": ["./node_modules/@types", "./types"] 
-//     },
-//     "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-//     "exclude": ["node_modules"]
-// }
 {
     "compilerOptions": {
       "target": "esnext",
@@ -32,7 +12,7 @@
       "paths": {
         "@/*": ["./*"]
       },
-      "types": ["@nuxt/types"] // Adicione esta linha
+      "types": ["@nuxt/types"] 
     },
     "include": [
       "nuxt.config.ts",
