--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.4.47",
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@vueuse/core": "^11.1.0",
+    "file-saver": "^2.0.5",
     "mdi-vue": "^3.0.13",
     "nuxt": "^3.13.2",
     "vite": "4.0.0",
