--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
     "@nuxtjs/seo": "2.0.0-rc.23",
+    "@vercel/analytics": "^1.3.2",
     "@vueuse/core": "^11.1.0",
     "file-saver": "^2.0.5",
     "mdi-vue": "^3.0.13",
