--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@vercel/analytics": "^1.3.2",
     "@vueuse/core": "^11.1.0",
+    "aos": "^2.3.4",
     "file-saver": "^2.0.5",
     "mdi-vue": "^3.0.13",
     "nuxt": "^3.13.2",
