--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "file-saver": "^2.0.5",
     "mdi-vue": "^3.0.13",
+    "mongodb": "^6.12.0",
     "nuxt": "^3.13.2",
     "vite": "4.0.0",
     "vue": "^3.5.12",
